Eclipse 4.9 (P20180926) JDT Patch for Groovy-Eclipse: JDT commit 926d18c
#686